[package]
name = "st7567_rs_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "embedded_graphics_hello_world"
path = "src/embedded_graphics_hello_world.rs"

[[bin]]
name = "animation_no_embedded_graphics"
path = "src/animation_no_embedded_graphics.rs"


[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embedded-graphics = "0.8.1"
static_cell = "2.0.0"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
heapless = "0.8"
portable-atomic = { version = "1.5", features = ["critical-section"] }
st7567_rs = "0.1.0"

[[example]]
name = "embedded_graphics_hello_world"
path = "src/rp/embedded_graphics_hello_world/embedded_graphics_hello_world.rs"
